--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,6 +22,10 @@
 			<li class="nav-item">
 			<a class="nav-link" href="/campgrounds">Home</a></li>
 		</ul>
+		<form action="/campgrounds" method="GET" class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
 		<ul class="navbar-nav">
 			<% if(!currentUser){ %>
 			<li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
