--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -5,7 +5,7 @@
 	</h1>
 	
 	<div style="width:30%; margin: 30px auto;">
-		<form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST">
+		<form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST" enctype="multipart/form-data">
 			<div class="form-group">
 				<input type="text" name="campround[name]" value="<%= campground.name %>" class="form-control">	
 			</div>
@@ -13,8 +13,9 @@
 				<input type="number" name="campround[price]" value="<%= campground.price %>" class="form-control">	
 			</div>	
 			<div class="form-group">
-				<input type="text" name="campground[image]" value="<%= campground.image %>" class="form-control">
-			</div>	
+                    <label for="image">Image</label>
+                    <input type="file" id="image" name="image" accept="image/*">
+            </div>
 			<div class="form-group">
 				<input type="text" name="campground[description]" value="<%= campground.description %>" class="form-control">
 			</div>			
