--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -5,7 +5,7 @@
 	</h1>
 	
 	<div style="width:30%; margin: 30px auto;">
-		<form action="/campgrounds" method="POST">
+		<form action="/campgrounds" method="POST" enctype="multipart/form-data">
 			<div class="form-group">
 				<input type="text" name="campground[name]" placeholder="name" class="form-control" required>	
 			</div>
