--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,6 +10,7 @@
 	
 </head>
 <body>
+	<header class="masthead mb-5">
 	<nav class="navbar navbar-expand-lg navbar-light mb-5" style="background-color: #e3f2fd;">
 	<a class="navbar-brand" href="/">SecHand</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navc" aria-controls="navc" aria-expanded="false" aria-label="Toggle navigation">
@@ -20,22 +21,24 @@
 	<div class="collapse navbar-collapse" id="navc">
 		<ul class="navbar-nav mr-auto">
 			<li class="nav-item">
-			<a class="nav-link" href="/campgrounds">Home</a></li>
+			<a class="nav-link" href="/sechands">Home</a></li>
 		</ul>
-		<form action="/campgrounds" method="GET" class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
-		<ul class="navbar-nav">
+
+		<ul class="navbar-nav ml-auto">
 			<% if(!currentUser){ %>
 			<li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
 			<a class="nav-item nav-link" href="/register">Sign up</a>
 			<% }else{ %>
 			
-			<li class="nav-link disabled"><i class="far fa-user"></i>Signed In As <%= currentUser.username %></li>
+			<a class="nav-item nav-link" href="/users/<%= currentUser._id %>"><i class="far fa-user"></i>Signed In As <%= currentUser.username %></a>
 			<a class="nav-item nav-link" href="/logout">Logout</a>
 			<% } %>
 		</ul>
+		
+		<form action="/sechands" method="GET" class="form-inline my-2 my-lg-0">
+		  <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="search">
+		  <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+		</form>
 	</div>
 </nav>
 	
@@ -51,5 +54,6 @@
 		</div>
 	<%}%>
 </div>
+</header>
 <div class="container">
 	
