--- a/views/sechands/edit.ejs
+++ b/views/sechands/edit.ejs
@@ -1,23 +1,23 @@
 <% include ../partials/header %>
 <div class="container">
 	<h1 style="text-align:center">
-		Edit <%= campground.name %>
+		Edit <%= sechand.name %>
 	</h1>
 	
 	<div style="width:30%; margin: 30px auto;">
-		<form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST" enctype="multipart/form-data">
+		<form action="/sechands/<%= sechand._id %>?_method=PUT" method="POST" enctype="multipart/form-data">
 			<div class="form-group">
-				<input type="text" name="campround[name]" value="<%= campground.name %>" class="form-control">	
+				<input type="text" name="campround[name]" value="<%= sechand.name %>" class="form-control">	
 			</div>
 			<div class="form-group">
-				<input type="number" name="campround[price]" value="<%= campground.price %>" class="form-control">	
+				<input type="number" name="campround[price]" value="<%= sechand.price %>" class="form-control">	
 			</div>	
 			<div class="form-group">
                     <label for="image">Image</label>
                     <input type="file" id="image" name="image" accept="image/*">
             </div>
 			<div class="form-group">
-				<input type="text" name="campground[description]" value="<%= campground.description %>" class="form-control">
+				<input type="text" name="sechand[description]" value="<%= sechand.description %>" class="form-control">
 			</div>			
 			<div class="form-group">
 				<button class="btn btn-primary btn-block">
@@ -25,7 +25,7 @@
 			</button>
 			</div>
 			<div class="form-group">
-				<a href="/campgrounds">Go to back</a>
+				<a href="/sechands">Go to back</a>
 			</div>
 		</form>	
 	</div>
