--- a/views/sechands/new.ejs
+++ b/views/sechands/new.ejs
@@ -5,19 +5,19 @@
 	</h1>
 	
 	<div style="width:30%; margin: 30px auto;">
-		<form action="/campgrounds" method="POST" enctype="multipart/form-data">
+		<form action="/sechands" method="POST" enctype="multipart/form-data">
 			<div class="form-group">
-				<input type="text" name="campground[name]" placeholder="name" class="form-control" required>	
+				<input type="text" name="sechand[name]" placeholder="name" class="form-control" required>	
 			</div>
 			<div class="form-group">
-				<input type="number" name="campground[price]" placeholder="price" min="0.01" step="0.01" class="form-control" required>	
+				<input type="number" name="sechand[price]" placeholder="price" min="0.01" step="0.01" class="form-control" required>	
 			</div>
 			<div class="form-group">
                     <label for="image">Image</label>
                     <input type="file" id="image" name="image" accept="image/*" required>
             </div>
 			<div class="form-group">
-				<input type="text" name="campground[description]" placeholder="description" class="form-control">
+				<input type="text" name="sechand[description]" placeholder="description" class="form-control">
 			</div>			
 			<div class="form-group">
 				<button class="btn btn-primary btn-block">
@@ -25,7 +25,7 @@
 			</button>
 			</div>
 			<div class="form-group">
-				<a href="/campgrounds">Go to back</a>
+				<a href="/sechands">Go to back</a>
 			</div>
 		</form>	
 	</div>
