--- a/views/sechands/landing.ejs
+++ b/views/sechands/landing.ejs
@@ -23,7 +23,7 @@
     
     <div id="landing-header">
  		<h1>Welcome to UCSD SecHand!</h1>
-		<a href="/campgrounds" class="btn btn-lg btn-success">View All Items on Sale</a>
+		<a href="/sechands" class="btn btn-lg btn-success">View All Items on Sale</a>
     </div>
     
     <ul class="slideshow">
