--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -22,3 +22,28 @@
 #tag {
 	font-size:1.2rem
 }
+
+*{
+    margin: 0;
+    padding: 0;
+}
+html,body{
+    height: 100%;
+}
+#container{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+header{
+
+    flex: 0 0 auto;
+}
+.main{
+
+    flex: 1 0 auto;
+}
+footer{
+
+    flex: 0 0 auto;
+}
