--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,50 +10,52 @@
 	
 </head>
 <body>
-	<header class="masthead mb-5">
-	<nav class="navbar navbar-expand-lg navbar-light mb-5" style="background-color: #e3f2fd;">
-	<a class="navbar-brand" href="/">SecHand</a>
-	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navc" aria-controls="navc" aria-expanded="false" aria-label="Toggle navigation">
-		<span class="navbar-toggler-icon"></span>
-    </button>
-		
-		
-	<div class="collapse navbar-collapse" id="navc">
-		<ul class="navbar-nav mr-auto">
-			<li class="nav-item">
-			<a class="nav-link" href="/sechands">Home</a></li>
-		</ul>
+	<div id="container">
+		<header class="masthead mb-5">
+			<nav class="navbar navbar-expand-lg navbar-light mb-5" style="background-color: #e3f2fd;">
+				<a class="navbar-brand" href="/">SecHand</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navc" aria-controls="navc" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
 
-		<ul class="navbar-nav ml-auto">
-			<% if(!currentUser){ %>
-			<li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
-			<a class="nav-item nav-link" href="/register">Sign up</a>
-			<% }else{ %>
-			
-			<a class="nav-item nav-link" href="/users/<%= currentUser._id %>"><i class="far fa-user"></i>Signed In As <%= currentUser.username %></a>
-			<a class="nav-item nav-link" href="/logout">Logout</a>
-			<% } %>
-		</ul>
+
+				<div class="collapse navbar-collapse" id="navc">
+					<ul class="navbar-nav mr-auto">
+						<li class="nav-item">
+						<a class="nav-link" href="/sechands">Home</a></li>
+					</ul>
+
+					<ul class="navbar-nav ml-auto">
+						<% if(!currentUser){ %>
+						<li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
+						<a class="nav-item nav-link" href="/register">Sign up</a>
+						<% }else{ %>
+
+						<a class="nav-item nav-link" href="/users/<%= currentUser._id %>"><i class="far fa-user"></i>Signed In As <%= currentUser.username %></a>
+						<a class="nav-item nav-link" href="/logout">Logout</a>
+						<% } %>
+					</ul>
+
+					<form action="/sechands" method="GET" class="form-inline my-2 my-lg-0">
+					  <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="search">
+					  <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+					</form>
+				</div>
+			</nav>
+
+			<div class="container">
+				<%if(error && error.length > 0){%>
+					<div class="alert alert-danger" role="alert">
+						<%= error %>
+					</div>
+				<%}%>
+				<%if(success && success.length > 0){%>
+					<div class="alert alert-success" role="alert">
+						<%= success %>
+					</div>
+				<%}%>
+			</div>
+		</header>
 		
-		<form action="/sechands" method="GET" class="form-inline my-2 my-lg-0">
-		  <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="search">
-		  <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-		</form>
-	</div>
-</nav>
-	
-<div class="container">
-	<%if(error && error.length > 0){%>
-		<div class="alert alert-danger" role="alert">
-			<%= error %>
-		</div>
-	<%}%>
-	<%if(success && success.length > 0){%>
-		<div class="alert alert-success" role="alert">
-			<%= success %>
-		</div>
-	<%}%>
-</div>
-</header>
-<div class="container">
+		<div class="container main">
 	
