--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,9 +1,9 @@
 </div>
 
-<footer class="footer navbar-fixed-bottom ">
-    <div class="container">
+<footer class="footer">
+
       <p>Sechand UCSD 2019</p>
-    </div>
+
 </footer>
 </div>
 
